Updates to about section

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <div>
         <h2 class="title" id="about">About me</h2>
         <p class='description'>
-            I'm a recent graduate of Western University, where I completed a Bachelor of Science with an Honours Specialization in Neuroscience.
+            I'm a (hopefully!) soon-to-be graduate of Western University, where I completed a Bachelor of Science with an Honours Specialization in Neuroscience.
             <br><br>
             During my time at Western, I edited the News and Features sections for the student newspaper, the <i>Western Gazette</i>. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
             <br><br>
-            My previous work experience is in neuroscience and mental health research. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
+            My previous work experience is in neuroscience and mental health research. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Cognitive Neurorehabilitation Lab at the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
             <br><br>
             I'd love to connect; please reach out at one of the links below!
             <br><br>
@@ -76,7 +76,7 @@
     <div>
         <h2 class='title' id='skills'>Skills</h2>
         <p>
-            <strong>Python</strong> and data science libraries (pandas, numpy, seaborn).<br><br>
+            <strong>Python</strong> and data science/visualization libraries (pandas, numpy, matplotlib, seaborn).<br><br>
             <strong>R</strong> and tidyverse packages (dplyr, tidyr, ggplot2).<br><br>
             I'm also proficient at coding in <strong>MATLAB</strong>, <strong>Java</strong>, <strong>HTML/CSS</strong>, and <strong>JavaScript</strong>.
         </p>
@@ -86,6 +86,9 @@
     <div>
         <h2 class='title' id='awards'>Grants and awards</h2>
         <p>
+            <strong>Investintech - CAJ Data Journalism Scholarship</strong><br><i class='date'>May 2024</i><br>
+            Awarded by Investintech, in partnership with the Canadian Association of Journalists, for demonstrating potential in journalism work and a solid foundation of technical data skills.
+            <br><br>
             <strong>[Shortlist] John H. McDonald Award for Student Journalist of the Year</strong><br><i class='date'>February 2024</i><br>
             Named as one of three students shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing exemplary work in reporting or editorial capacities.
             <br><br>
