--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
   
     <!-- Introduction -->
 
-    <h1 class='title' id='writing'>Writing</h1>
+    <h2 class='title' id='writing'>Writing</h1>
     <p class="above-collapse"><i>News, profiles, and data-driven stories written for the <i>Western Gazette</i>, Western University's student newspaper.</i></p>
 
     <div>
@@ -68,11 +68,13 @@
         <p><strong><a href='https://westerngazette.ca/news/using-data-to-plan-your-trip-to-the-rec-centre/article_a393ead8-70d7-11ed-8fbe-63379a003173.html'>Using data to plan your trip to the Rec Centre</a></strong><br> 
             I wrote a Twitter scraper in Python using Tweepy and the Twitter API to write this data-driven story. I collected data on three months' worth of occupancy levels using the scraper and analyzed it for trends.
         </p>
+        <p>All of my work for the <i>Gazette</i> can be found <strong><a href='https://westerngazette.ca/users/profile/Sonia%20Persaud'>here</a></strong>.
+        </p>
     </div>
 
 
-    <br><br>
-    <h1 class='title'>Coding</h1>
+    <br>
+    <h2 class='title'>Coding</h1>
     <p class="above-collapse"><i>Projects developed in Python, including bots and a web scraper.</i></p>
 
     <div>
