Retired from neuroscience, new career in med update

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <div>
         <h2 class="title" id="about">About me</h2>
         <p class='description'>
-            I'm a (hopefully!) soon-to-be graduate of Western University, where I completed a Bachelor of Science with an Honours Specialization in Neuroscience.
+            I'm a first-year medical student at Queen's University based in Kingston and Toronto, Ontario. I graduated from Western University in 2024 with a B.Sc., where I completed an Honours Specialization in Neuroscience.
             <br><br>
             During my time at Western, I edited the News and Features sections for the student newspaper, the <i>Western Gazette</i>. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for the Canadian University Press Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
             <br><br>
-            My previous work experience is in neuroscience and mental health research. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Cognitive Neurorehabilitation Lab at the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
+            My previous work experience is in neuroscience and mental health research. I've worked as a summer research student at Women's College Hospital and the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
             <br><br>
             I'd love to connect; please reach out at one of the links below!
             <br><br>
@@ -67,7 +67,7 @@
         <div class='contact'>
             <a href="https://github.com/medialtemporal/"><img src="images/github.png" onmouseover="this.src='images/github-hover.png'" onmouseout="this.src='images/github.png'" height='25em' width='25em' /></a>
             <a href="https://twitter.com/soniarpersaud"><img src="images/twitter.png" onmouseover="this.src='images/twitter-hover.png'" onmouseout="this.src='images/twitter.png'" height='25em' width='25em' /></a>
-            <a class='email' href="mailto:spersa46@uwo.ca" style="text-decoration: none;">spersa46@uwo.ca</a>
+            <a class='email' href="mailto:spersa46@uwo.ca" style="text-decoration: none;">spersaud@qmed.ca</a>
 
         </div>
     </div>
