--- a/projects.html
+++ b/projects.html
@@ -49,11 +49,14 @@
     <!-- Introduction -->
 
     <h2 class='title' id='writing'>Writing</h1>
-    <p class="above-collapse"><i>News, profiles, and data-driven stories written for the <i>Western Gazette</i>, Western University's student newspaper.</i></p>
+    <p class="above-collapse"><i>A small selection of news, profiles, and data-driven stories written for the <i>Western Gazette</i>, Western University's student newspaper.</i></p>
 
     <div>
         <p><strong><a href='https://westerngazette.ca/features/what-650-syllabi-show-about-western-s-chatgpt-response/article_6df82ffe-cb5f-11ee-a47b-c7527dd39bf4.html'>What 650 syllabi show about Western's ChatGPT response</a></strong><br>
             I used Python and the PyPDF libraries to search for generative AI related keywords in course syllabi and analyzed professor approaches and sentiment.
+        </p>
+        <p><strong><a href='https://westerngazette.ca/news/campus/western-acquires-the-second-15-2t-ultra-high-field-mri-scanner-in-north-america/article_f19d470e-8974-11ee-83a7-1784e59ab0eb.html'>Western acquires the second 15.2T ultra-high field MRI scanner in North America</a></strong><br>
+            A story on Western's acquisition of a new high-field MRI scanner and its implications for campus research programs.
         </p>
         <p><strong><a href='https://westerngazette.ca/features/tracking-western-s-energy-use-and-what-it-means-for-campus-s-net-zero-goal/article_daded57c-88a8-11ee-aeb5-73e3acfd0fab.html'>Tracking Western's energy use — and what it means for campus's net-zero goal</a></strong><br>
             I web-scraped, analyzed, and visualized data on energy use at Western University across different types of campus buildings.
