--- a/index.html
+++ b/index.html
@@ -48,36 +48,19 @@
 </head>
    
 <body onload="typeWriter()">
-
-    <!-- Navigation Bar 
-    <nav>
-        <div class="navbar">
-            <a class="navbar-name" href="#top"><h2 id="top">Sonia Persaud</h2></a>
-            <ul class="links">
-                <li>
-                    <a class='nav-link' href='index.html' id="about-on-about">About</a>
-                </li>
-                <li>
-                    <a class='nav-link' href="projects.html">Projects</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    -->
   
     <!-- Introduction -->
     <div class="hello">
         <h1 id="typewriter"></h1>
-        <!-- <img border="0" src="images/sonia2.png" width="130" height="130" id="pfp"> -->
     </div>
 
-    <!-- About-->
+    <!-- About -->
     <div>
         <h2 class="title" id="about">About me</h2>
         <p class='description'>
             I'm a first-year medical student at Queen's University and a freelance journalist based in Kingston and Toronto, Ontario. I graduated from Western University in 2024 with an Honours B.Sc. in Neuroscience.
             <br><br>
-            During my time at Western, I edited the News and Features sections for the student newspaper, the <i>Western Gazette</i>. I've received awards from the Canadian Association of Journalists (CAJ) and the Canadian University Press (CUP) for my work in data journalism and feature writing. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for CUP's Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
+            During my time at Western, I edited the News and Features sections for the student newspaper, the <i>Western Gazette</i>. I've won awards recognizing this work from the Canadian Association of Journalists (CAJ) and the Canadian University Press (CUP), for data journalism and feature writing. In my final year at the <i>Gazette</i>, I was one of three Canadian student journalists shortlisted for CUP's Student Journalist of the Year award, recognizing all-round excellence in the newsroom.
             <br><br>
             My previous work experience is in neuroscience and mental health research. I've worked as a summer research student at the Trauma Research Program at Women's College Hospital and the Cognitive Neurorehabilitation Lab at the Toronto Rehabilitation Institute, and as an intern at the youth mental health non-profit Jack.org.
             <br><br>
@@ -92,29 +75,31 @@
         <br>
     </div>
 
-    <!-- Writing -->
+    <!-- Skills -->
     <div>
         <h2 class='title' id='work'>Writing</h2>
-        <p><i>A selection of news, profiles, and data-driven stories written for the <i>Western Gazette</i>, Western University's student newspaper.</i></p>
+        <p><i>A selection of news, profiles, and data-driven stories written for the </i><i>Western Gazette<i>, Western University's student newspaper.</i></p>
     <div>
         <p><strong><a href='https://westerngazette.ca/features/what-650-syllabi-show-about-western-s-chatgpt-response/article_6df82ffe-cb5f-11ee-a47b-c7527dd39bf4.html'>What 650 syllabi show about Western's ChatGPT response</a></strong><br>
-            I used Python to search for generative AI related keywords in over 650 course syllabi and analyzed professor approaches and sentiment.
+            A data-driven feature investigating Western's response to ChatGPT and other generative AI tools. I analyzed course syllabi to understand professor approaches and sentiment across faculties.
         </p>
         <p><strong><a href='https://westerngazette.ca/features/beyond-the-blueprint-bridging-the-gender-gap-in-western-engineering/article_52c6e590-8fc8-11ee-a13e-5fa5cac05ad4.html'>Bridging the gender gap in Western Engineering</a></strong><br>
-            A feature on the gender gap in the Faculty of Engineering at Western University, where just 23 per cent of students identify as women.
+            A feature on the gender gap in the Faculty of Engineering at Western, where just 23 per cent of students identify as women.
         </p>
-        <p><strong><a href='https://westerngazette.ca/culture/profiles/western-s-dead-bird-guy-brendon-samuels/article_87bdda58-7293-11ee-ae5d-cfc895f0ec3b.html'>Western's 'dead bird guy': Brendon Samuels</a></strong><br>
-            A profile of Western University PhD candidate and climate activist Brendon Samuels.
+        <p><strong><a href='https://westerngazette.ca/news/usc/see-how-your-2023-usc-councillors-voted-on-greek-life-special-privileges/article_de40945c-95e2-11ee-bebd-abcf0d07fc25.html'>See how your 2023 USC councillors voted on Greek Life special privileges</a></strong><br>
+            In this story, we provided students with a granular look at a divisive student government vote. <i>(With Jessica Kim)</i>
+        </p>
+        <p><strong><a href='https://westerngazette.ca/news/campus/western-acquires-the-second-15-2t-ultra-high-field-mri-scanner-in-north-america/article_f19d470e-8974-11ee-83a7-1784e59ab0eb.html'>Western acquires the second 15.2T ultra-high field MRI scanner in North America</a></strong><br>
+            A news story on how a new MRI scanner will affect neuroscience research at Western. 
         </p>
         <p><strong><a href='https://westerngazette.ca/culture/student_life/it-s-devastating-sudanese-students-call-on-western-government-to-help-country-in-crisis/article_6b62831e-11b7-11ee-8319-73554bfb3d2c.html'>Sudanese students call on Western, government to help country in crisis</a></strong><br>
-            I spoke with Sudanese-Canadian students at Western University, who say the university and the nation need to do more to respond to Sudan's civil war.
+            I spoke with Sudanese-Canadian students at Western, who say the university and the nation need to do more to respond to Sudan's civil war.
         </p>
         <p>All of my work for the <i>Gazette</i> can be found <strong><a href='https://westerngazette.ca/users/profile/Sonia%20Persaud'>here</a></strong>.
         </p>
     </div>
     </div>
-    
-    <!--Awards -->
+    <!--Awards & Honours -->
     <div>
         <h2 class='title' id='awards'>Grants and awards</h2>
         <p>
@@ -135,6 +120,7 @@
             <br><br>
             <strong>UHN Medical Staff Association Volunteer Educational Award&nbsp;&nbsp;&nbsp;</strong><i class='date'>June 2020</i><br>
             Scholarship awarded for demonstrating an exceptional commitment to volunteering at the University Health Network, along with high academic performance and extracurricular contributions.
+            <br><br>
         </p>
     </div>
 
