--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Skills -->
     <div>
         <h2 class='title' id='work'>Writing</h2>
-        <p><i>A selection of news, profiles, and data-driven stories written for the </i>Western Gazette<i>, Western University's student newspaper.</i></p>
+        <p><i>A selection of news, features, and data-driven stories written for the </i>Western Gazette<i>, Western University's student newspaper.</i></p>
     <div>
         <p><strong><a href='https://westerngazette.ca/features/what-650-syllabi-show-about-western-s-chatgpt-response/article_6df82ffe-cb5f-11ee-a47b-c7527dd39bf4.html'>What 650 syllabi show about Western's ChatGPT response</a></strong><br>
             A data-driven feature investigating Western's response to ChatGPT and other generative AI tools. I analyzed course syllabi to understand professor approaches and sentiment across faculties.
